[package]
name = "music-sync"
version = "0.1.0"
authors = ["Simão Mata <sm@0io.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.23"
r2d2 = "0.8"
r2d2_sqlite = "0.16"
failure = "0.1"
base64-url = "1.4.7"
