[package]
name = "musicsyncd"
version = "0.1.0"
authors = ["Simão Mata <sm@0io.eu>"]
edition = "2018"
license = "EUPL-1.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
actix-web = "3"
actix-rt = "1"
actix-files = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.23"
r2d2 = "0.8"
r2d2_sqlite = "0.16"
anyhow = "1.0"
audiotags = "0.2"
structopt = "0.3"
directories = "3.0"
regex = "1"
lazy_static = "1.4"
